deployment/kibana/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kibana-service
  namespace: monitoring
spec:
  type: NodePort # NodePort makes the service external, meaning, can be accessed by the world. By default, it's internal
  selector:
    app: kibana
  ports:
    - protocol: TCP
      port: 5601
      targetPort: 5601
      nodePort: 30100 # Range is btw 30000 and 32767
