deployment/kibana/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kibana-ingress
  namespace: monitoring
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: kibana.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kibana-service
                port:
                  number: 5555
